--- a/public/index.html
+++ b/public/index.html
@@ -669,8 +669,8 @@ scaleY(var(--tw-scale-y, 1))
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.43.4"></script>
     <script>
       (function() {
-        const SUPABASE_URL = 'https://0ec90b57d6e95fcbda19832f.supabase.co';
-        const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJib2x0IiwicmVmIjoiMGVjOTBiNTdkNmU5NWZjYmRhMTk4MzJmIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTg4ODE1NzQsImV4cCI6MTc1ODg4MTU3NH0.9I8-U0x86Ak8t2DGaIk0HfvTSLsAyzdnz-Nw00mMkKw';
+        const SUPABASE_URL = 'https://lhupvptyqaavcexxpnat.supabase.co';
+        const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImxodXB2cHR5cWFhdmNleHhwbmF0Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjQ0MDcyODUsImV4cCI6MjA3OTk4MzI4NX0.uH_ojqmCtDFDk9L9ZKz5rj5cWGnEL44ge7qJiLvq8D0';
         const START_KEY = 'conexus_page_start';
 
         const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
